k8s/service-go-web-app.yml
apiVersion: v1
kind: Service
metadata:
  name: go-web-app-deployment
  namespace: go-web-app
spec:
  selector:
    app: go-web-app-deployment
  ports:
    - port: 9000
      targetPort: 9000
  type: ClusterIP
