k8s/go-web-app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-web-app
  namespace: go-web-app
spec:
   ingressClassName: nginx
   rules:
    - host: go-web-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-web-app-deployment
                port:
                  number: 9000
